--- a/home.html
+++ b/home.html
@@ -7,6 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://unpkg.com/bootstrap-datepicker@1.9.0/dist/css/bootstrap-datepicker3.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
     <link href="assets/css/styles.css" rel="stylesheet">
 
@@ -41,45 +42,35 @@
                         </div>
                     </div>
                     <div class="me-2">
-                        <div class="input-group input-group-sm date" data-provide="datepicker">
-                            <input type="text" class="form-control">
+                        <div class="date input-group input-group-sm" data-provide="datepicker">
                             <div class="input-group-addon">
-                                <span class="glyphicon glyphicon-th"></span>
+                                <span class="input-group-text" id="basic-addon1"><img src="assets/img/calendar.svg"></span>
                             </div>
+                            <input type="text" class="form-control" value="Last 30 days">
                         </div>
                     </div>
                     <div class="me-2">
-                        <div class="dropdown dropdown-select">
-                            <button class="btn btn-sm btn-light dropdown-toggle" type="button" id="dropdownSelectBtn" data-bs-toggle="dropdown" aria-expanded="false">
-                                Dropdown button
-                            </button>
-                            <ul class="dropdown-menu" aria-labelledby="dropdownSelectBtn">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="me-2">
-                        <select class="selectpicker show-tick" data-selected-text-format="count" data-width="124px">
-                            <option>All</option>
-                            <option>Active</option>
-                            <option>Closed</option>
-                            <option>Pending</option>
+                        <select id="statusFilter" class="selectpicker show-tick" data-selected-text-format="count" data-width="124px">
+                            <option value="all">All</option>
+                            <option value="active">Active</option>
+                            <option value="closed">Closed</option>
+                            <option value="pending">Pending</option>
                         </select>
                     </div>
                     <div class="ms-auto">
-                        <div class="d-inline">1-35 of 35</div>
-                        <div class="d-inline">
-                            <button type="button" class="btn btn-link btn-sm"><img src="assets/img/chevron-left.svg"></button>
-                            <button type="button" class="btn btn-link btn-sm"><img src="assets/img/chevron-right.svg"></button>
+                        <div class="d-inline ms-1">
+                            <span class="paginator">1-35 of 35</span>
                         </div>
-                        <div class="d-inline"><button type="button" class="btn btn-secondary btn-sm"><img src="assets/img/gear.svg"></button></div>
+                        <div class="d-inline ms-1">
+                            <button type="button" class="btn no-bg btn-sm ps-0 pe-0 disabled"><img src="assets/img/chevron-left.svg"></button>
+                            <button type="button" class="btn no-bg btn-sm ps-0 pe-0"><img src="assets/img/chevron-right.svg"></button>
+                        </div>
+                        <div class="d-inline ms-1"><button type="button" class="btn btn-primary btn-sm square"><img src="assets/img/cog.svg"></button></div>
                     </div>
                 </div>
 
                 <div class="table-responsive">
-                    <table class="table align-middle">
+                    <table id="purchasesHistoryTable" class="table align-middle">
                         <tr>
                             <th>Due</th>
                             <th>From</th>
@@ -91,83 +82,83 @@
                         </tr>
                         <tr>
                             <td>Jun 10, 2020</td>
-                            <td>Corey O'Gomez Adams Family <small><a href="#" title="go to 45 Broadway Renovation page">45 Broadway Renovation</a></small></td>
+                            <td>Corey O'Gomez Adams Family <small><a href="#" title="go to 45 broadway Renovation page">45 broadway Renovation</a></small></td>
                             <td class="status"><span class="badge rounded-pill active">Active</span></td>
-                            <td class="text-end">$37,800.00<small>FS</small></td>
-                            <td>346 <small>From catalog</small></td>
-                            <td>Big Bang inc <small>From vendor contract</small></td>
+                            <td class="text-end">$37,800.00</td>
+                            <td>346<small>From catalog</small></td>
+                            <td>Big bang inc<small>From vendor contract</small></td>
                             <td>Living room interior paint <small data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-html="true" title="Concrete<br />Lights<br />Logs">+3 more</small></td>
                         </tr>
                         <tr>
                             <td>Jun 10, 2020</td>
-                            <td>Corey O'Gomez Adams Family <small><a href="#" title="go to 45 Broadway Renovation page">45 Broadway Renovation</a></small></td>
+                            <td>Corey O'Gomez Adams Family <small><a href="#" title="go to 45 broadway Renovation page">45 broadway Renovation</a></small></td>
+                            <td class="status"><span class="badge rounded-pill pending">Pending</span></td>
+                            <td class="text-end">$37,800.00<small>FS</small></td>
+                            <td>457</td>
+                            <td>Big bang inc</td>
+                            <td>Living room interior paint <small data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-html="true" title="Concrete<br />Lights<br />Logs">+3 more</small></td>
+                        </tr>
+                        <tr>
+                            <td>Jun 10, 2020</td>
+                            <td>Corey O'Gomez Adams Family <small><a href="#" title="go to 45 broadway Renovation page">45 broadway Renovation</a></small></td>
+                            <td class="status"><span class="badge rounded-pill closed">Closed</span></td>
+                            <td class="text-end">$37,800.00<small>FS</small></td>
+                            <td>346<small>From catalog</small></td>
+                            <td>Big bang inc<small>From vendor contract</small></td>
+                            <td>Living room interior paint <small data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-html="true" title="Concrete<br />Lights<br />Logs">+3 more</small></td>
+                        </tr>
+                        <tr>
+                            <td>Jun 10, 2020</td>
+                            <td>Corey O'Gomez Adams Family <small><a href="#" title="go to 45 broadway Renovation page">45 broadway Renovation</a></small></td>
                             <td class="status"><span class="badge rounded-pill pending">Pending</span></td>
                             <td class="text-end">$37,800.00</td>
-                            <td>346 <small>From catalog</small></td>
-                            <td>Big Bang inc <small>From vendor contract</small></td>
+                            <td>346<small>From catalog</small></td>
+                            <td>Big bang inc. <img src="assets/img/envelope.svg" alt="mail icon"/></td>
                             <td>Living room interior paint <small data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-html="true" title="Concrete<br />Lights<br />Logs">+3 more</small></td>
                         </tr>
                         <tr>
                             <td>Jun 10, 2020</td>
-                            <td>Corey O'Gomez Adams Family <small><a href="#" title="go to 45 Broadway Renovation page">45 Broadway Renovation</a></small></td>
+                            <td>Corey O'Gomez Adams Family <small><a href="#" title="go to 45 broadway Renovation page">45 broadway Renovation</a></small></td>
+                            <td class="status"><span class="badge rounded-pill active">Active</span></td>
+                            <td class="text-end">$37,800.00</td>
+                            <td>346<small>From catalog</small></td>
+                            <td>Big bang inc<small>From vendor contract</small></td>
+                            <td>Living room interior paint <small data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-html="true" title="Concrete<br />Lights<br />Logs">+3 more</small></td>
+                        </tr>
+                        <tr>
+                            <td>Jun 10, 2020</td>
+                            <td>Corey O'Gomez Adams Family <small><a href="#" title="go to 45 broadway Renovation page">45 broadway Renovation</a></small></td>
                             <td class="status"><span class="badge rounded-pill closed">Closed</span></td>
-                            <td class="text-end">$37,800.00</td>
-                            <td>346 <small>From catalog</small></td>
-                            <td>Big Bang inc <small>From vendor contract</small></td>
+                            <td class="text-end">$37,800.00<small>FS</small></td>
+                            <td>457</td>
+                            <td>Big bang inc. <img src="assets/img/envelope.svg" alt="mail icon"/><small>From vendor contract</small></td>
                             <td>Living room interior paint <small data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-html="true" title="Concrete<br />Lights<br />Logs">+3 more</small></td>
                         </tr>
                         <tr>
                             <td>Jun 10, 2020</td>
-                            <td>Corey O'Gomez Adams Family <small><a href="#" title="go to 45 Broadway Renovation page">45 Broadway Renovation</a></small></td>
+                            <td>Corey O'Gomez Adams Family <small><a href="#" title="go to 45 broadway Renovation page">45 broadway Renovation</a></small></td>
                             <td class="status"><span class="badge rounded-pill active">Active</span></td>
                             <td class="text-end">$37,800.00</td>
-                            <td>346 <small>From catalog</small></td>
-                            <td>Big Bang inc <small>From vendor contract</small></td>
+                            <td>457</td>
+                            <td>Big bang inc. <img src="assets/img/envelope.svg" alt="mail icon"/></td>
                             <td>Living room interior paint <small data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-html="true" title="Concrete<br />Lights<br />Logs">+3 more</small></td>
                         </tr>
                         <tr>
                             <td>Jun 10, 2020</td>
-                            <td>Corey O'Gomez Adams Family <small><a href="#" title="go to 45 Broadway Renovation page">45 Broadway Renovation</a></small></td>
-                            <td class="status"><span class="badge rounded-pill active">Active</span></td>
+                            <td>Corey O'Gomez Adams Family <small><a href="#" title="go to 45 broadway Renovation page">45 broadway Renovation</a></small></td>
+                            <td class="status"><span class="badge rounded-pill pending">Pending</span></td>
                             <td class="text-end">$37,800.00</td>
-                            <td>346 <small>From catalog</small></td>
-                            <td>Big Bang inc <small>From vendor contract</small></td>
+                            <td>345<small>From catalog</small></td>
+                            <td>Big bang inc<small>From vendor contract</small></td>
                             <td>Living room interior paint <small data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-html="true" title="Concrete<br />Lights<br />Logs">+3 more</small></td>
                         </tr>
                         <tr>
                             <td>Jun 10, 2020</td>
-                            <td>Corey O'Gomez Adams Family <small><a href="#" title="go to 45 Broadway Renovation page">45 Broadway Renovation</a></small></td>
-                            <td class="status"><span class="badge rounded-pill active">Active</span></td>
+                            <td>Corey O'Gomez Adams Family <small><a href="#" title="go to 45 broadway Renovation page">45 broadway Renovation</a></small></td>
+                            <td class="status"><span class="badge rounded-pill pending">Pending</span></td>
                             <td class="text-end">$37,800.00</td>
-                            <td>346 <small>From catalog</small></td>
-                            <td>Big Bang inc <small>From vendor contract</small></td>
-                            <td>Living room interior paint <small data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-html="true" title="Concrete<br />Lights<br />Logs">+3 more</small></td>
-                        </tr>
-                        <tr>
-                            <td>Jun 10, 2020</td>
-                            <td>Corey O'Gomez Adams Family <small><a href="#" title="go to 45 Broadway Renovation page">45 Broadway Renovation</a></small></td>
-                            <td class="status"><span class="badge rounded-pill active">Active</span></td>
-                            <td class="text-end">$37,800.00</td>
-                            <td>346 <small>From catalog</small></td>
-                            <td>Big Bang inc <small>From vendor contract</small></td>
-                            <td>Living room interior paint <small data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-html="true" title="Concrete<br />Lights<br />Logs">+3 more</small></td>
-                        </tr>
-                        <tr>
-                            <td>Jun 10, 2020</td>
-                            <td>Corey O'Gomez Adams Family <small><a href="#" title="go to 45 Broadway Renovation page">45 Broadway Renovation</a></small></td>
-                            <td class="status"><span class="badge rounded-pill active">Active</span></td>
-                            <td class="text-end">$37,800.00</td>
-                            <td>346 <small>From catalog</small></td>
-                            <td>Big Bang inc <small>From vendor contract</small></td>
-                            <td>Living room interior paint <small data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-html="true" title="Concrete<br />Lights<br />Logs">+3 more</small></td>
-                        </tr>
-                        <tr>
-                            <td>Jun 10, 2020</td>
-                            <td>Corey O'Gomez Adams Family <small><a href="#" title="go to 45 Broadway Renovation page">45 Broadway Renovation</a></small></td>
-                            <td class="status"><span class="badge rounded-pill active">Active</span></td>
-                            <td class="text-end">$37,800.00</td>
-                            <td>346 <small>From catalog</small></td>
-                            <td>Big Bang inc <small>From vendor contract</small></td>
+                            <td>345<small>From catalog</small></td>
+                            <td>Big bang inc<small>From vendor contract</small></td>
                             <td>Living room interior paint <small data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-html="true" title="Concrete<br />Lights<br />Logs">+3 more</small></td>
                         </tr>
                     </table>
@@ -189,8 +180,8 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.14.0-beta2/dist/js/bootstrap-select.min.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
 
-<script>
-    $( document ).ready(function() {
+<script type="text/javascript">
+    $(document).ready(function() {
         // Tooltips init
         var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
         var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
@@ -200,6 +191,28 @@
         // Datepicker init
         $('.datepicker').datepicker();
     });
+
+    // Update filter when user change the select
+    $('#statusFilter').on('change', function() {
+        filterByStatus($(this).val());
+    })
+
+    // Show/Hide rows depending on the selected status filter
+    function filterByStatus(value) {
+        let tableEl = $('#purchasesHistoryTable');
+
+        if ( value === 'all' ) {
+            tableEl.find('tr').removeClass('d-none');
+        } else {
+            tableEl.find('td.status').each( function() {
+                if ( !$(this).find('.'+ value).length > 0 ) {
+                    $(this).closest('tr').addClass('d-none');
+                } else {
+                    $(this).closest('tr').removeClass('d-none');
+                }
+            });
+        }
+    }
 </script>
 
 </body>
