--- a/home.html
+++ b/home.html
@@ -34,14 +34,14 @@
         <div class="tab-content" id="nav-tabContent">
 
             <div class="tab-pane fade show active" id="nav-manage-purchases" role="tabpanel" aria-labelledby="nav-manage-purchases-tab">
-                <div class="toolbar d-flex bd-highlight mb-2">
-                    <div class="me-2">
+                <div class="toolbar d-flex flex-wrap bd-highlight">
+                    <div class="me-2 mb-2">
                         <div class="search-input input-group input-group-sm">
                             <span class="input-group-text" id="basic-addon1"><img src="assets/img/search.svg"></span>
                             <input type="text" class="form-control" placeholder="Search table..." aria-label="Username" aria-describedby="basic-addon1">
                         </div>
                     </div>
-                    <div class="me-2">
+                    <div class="me-2 mb-2">
                         <div class="date input-group input-group-sm" data-provide="datepicker">
                             <div class="input-group-addon">
                                 <span class="input-group-text" id="basic-addon1"><img src="assets/img/calendar.svg"></span>
@@ -49,7 +49,7 @@
                             <input type="text" class="form-control" value="Last 30 days">
                         </div>
                     </div>
-                    <div class="me-2">
+                    <div class="me-2 mb-2">
                         <select id="statusFilter" class="selectpicker show-tick" data-selected-text-format="count" data-width="124px">
                             <option value="all">All</option>
                             <option value="active">Active</option>
@@ -57,7 +57,7 @@
                             <option value="pending">Pending</option>
                         </select>
                     </div>
-                    <div class="ms-auto">
+                    <div class="ms-auto mb-2">
                         <div class="d-inline ms-1">
                             <span class="paginator">1-35 of 35</span>
                         </div>
@@ -179,41 +179,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js" integrity="sha512-T/tUfKSV1bihCnd+MxKD0Hm1uBBroVYBOYSk1knyvQ9VyZJpc/ALb4P0r6ubwVPSGB2GvjeoMAJJImBG12TiaQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.14.0-beta2/dist/js/bootstrap-select.min.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
-
-<script type="text/javascript">
-    $(document).ready(function() {
-        // Tooltips init
-        var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
-        var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
-            return new bootstrap.Tooltip(tooltipTriggerEl)
-        })
-
-        // Datepicker init
-        $('.datepicker').datepicker();
-    });
-
-    // Update filter when user change the select
-    $('#statusFilter').on('change', function() {
-        filterByStatus($(this).val());
-    })
-
-    // Show/Hide rows depending on the selected status filter
-    function filterByStatus(value) {
-        let tableEl = $('#purchasesHistoryTable');
-
-        if ( value === 'all' ) {
-            tableEl.find('tr').removeClass('d-none');
-        } else {
-            tableEl.find('td.status').each( function() {
-                if ( !$(this).find('.'+ value).length > 0 ) {
-                    $(this).closest('tr').addClass('d-none');
-                } else {
-                    $(this).closest('tr').removeClass('d-none');
-                }
-            });
-        }
-    }
-</script>
+<script type="text/javascript" src="main.js"></script>
 
 </body>
 </html>
