--- a/home.html
+++ b/home.html
@@ -4,12 +4,14 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link href="https://unpkg.com/bootstrap-datepicker@1.9.0/dist/css/bootstrap-datepicker3.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
+    <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="assets/css/bootstrap-datepicker3.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/bootstrap-select.min.css">
+    <!-- Knowify CSS -->
     <link href="assets/css/styles.css" rel="stylesheet">
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="assets/img/favicon-300x300.ico">
 
     <title>Knowify - Purchases history</title>
 </head>
@@ -21,9 +23,9 @@
 
         <nav>
             <div class="nav nav-tabs" id="nav-tab" role="tablist">
-                <button class="nav-link active" id="nav-manage-purchases-tab" data-bs-toggle="tab" data-bs-target="#nav-manage-purchases" type="button" role="tab" aria-controls="nav-manage-purchases" aria-selected="true">Manage purchases</button>
-                <button class="nav-link" id="nav-manage-payments-tab" data-bs-toggle="tab" data-bs-target="#nav-manage-payments" type="button" role="tab" aria-controls="nav-manage-payments" aria-selected="false">Manage payments</button>
-                <button class="nav-link" id="nav-purchases-report-tab" data-bs-toggle="tab" data-bs-target="#nav-purchases-report" type="button" role="tab" aria-controls="nav-purchases-report" aria-selected="false">Purchases report</button>
+                <button class="nav-link active" id="navManagePurchasesTab" data-bs-toggle="tab" data-bs-target="#navManagePurchases" type="button" role="tab" aria-controls="navManagePurchases" aria-selected="true">Manage purchases</button>
+                <button class="nav-link" id="navManagePaymentsTab" data-bs-toggle="tab" data-bs-target="#navManagePayments" type="button" role="tab" aria-controls="navManagePayments" aria-selected="false">Manage payments</button>
+                <button class="nav-link" id="navPurchasesReportTab" data-bs-toggle="tab" data-bs-target="#navPurchasesReport" type="button" role="tab" aria-controls="navPurchasesReport" aria-selected="false">Purchases report</button>
             </div>
         </nav>
     </div>
@@ -33,23 +35,25 @@
     <div class="container">
         <div class="tab-content" id="nav-tabContent">
 
-            <div class="tab-pane fade show active" id="nav-manage-purchases" role="tabpanel" aria-labelledby="nav-manage-purchases-tab">
+            <div class="tab-pane fade show active" id="navManagePurchases" role="tabpanel" aria-labelledby="navManagePurchasesTab">
                 <div class="toolbar d-flex flex-wrap bd-highlight">
                     <div class="me-2 mb-2">
                         <div class="search-input input-group input-group-sm">
-                            <span class="input-group-text" id="basic-addon1"><img src="assets/img/search.svg"></span>
+                            <span class="input-group-text"><img src="assets/img/search.svg" alt="search icon"></span>
                             <input type="text" class="form-control" placeholder="Search table..." aria-label="Username" aria-describedby="basic-addon1">
                         </div>
                     </div>
                     <div class="me-2 mb-2">
+                        <label for="dateInput" class="visually-hidden">Date</label>
                         <div class="date input-group input-group-sm" data-provide="datepicker">
                             <div class="input-group-addon">
-                                <span class="input-group-text" id="basic-addon1"><img src="assets/img/calendar.svg"></span>
+                                <span class="input-group-text"><img src="assets/img/calendar.svg" alt="calendar icon"></span>
                             </div>
-                            <input type="text" class="form-control" value="Last 30 days">
+                            <input id="dateInput" type="text" class="form-control" value="Last 30 days">
                         </div>
                     </div>
                     <div class="me-2 mb-2">
+                        <label for="statusFilter" class="visually-hidden">Status</label>
                         <select id="statusFilter" class="selectpicker show-tick" data-selected-text-format="count" data-width="124px">
                             <option value="all">All</option>
                             <option value="active">Active</option>
@@ -57,15 +61,15 @@
                             <option value="pending">Pending</option>
                         </select>
                     </div>
-                    <div class="ms-auto mb-2">
-                        <div class="d-inline ms-1">
+                    <div class="ms-auto mb-2 right-section">
+                        <div class="d-inline-block ms-1">
                             <span class="paginator">1-35 of 35</span>
                         </div>
-                        <div class="d-inline ms-1">
-                            <button type="button" class="btn no-bg btn-sm ps-0 pe-0 disabled"><img src="assets/img/chevron-left.svg"></button>
-                            <button type="button" class="btn no-bg btn-sm ps-0 pe-0"><img src="assets/img/chevron-right.svg"></button>
+                        <div class="d-inline-block ms-1 paginator-buttons">
+                            <button type="button" class="btn no-bg btn-sm ps-0 pe-0 disabled"><img src="assets/img/chevron-left.svg" alt="left arrow icon"></button>
+                            <button type="button" class="btn no-bg btn-sm ps-0 pe-0"><img src="assets/img/chevron-right.svg" alt="right arrow icon"></button>
                         </div>
-                        <div class="d-inline ms-1"><button type="button" class="btn btn-primary btn-sm square"><img src="assets/img/cog.svg"></button></div>
+                        <div class="d-inline-block ms-1"><button type="button" class="btn btn-primary btn-sm square"><img src="assets/img/cog.svg" alt="tools icon"></button></div>
                     </div>
                 </div>
 
@@ -165,20 +169,30 @@
                 </div>
             </div>
 
-            <div class="tab-pane fade" id="nav-manage-payments" role="tabpanel" aria-labelledby="nav-manage-payments-tab">...</div>
+            <div class="tab-pane fade text-center" id="navManagePayments" role="tabpanel" aria-labelledby="navManagePaymentsTab">
+                <h2 class="mt-5">Coming soon</h2>
+                <p><strong>Manage payments</strong> section is under construction</p>
+                <a href="home.html" class="text-center btn btn-primary">Back to Manage purchases</a>
+            </div>
 
-            <div class="tab-pane fade" id="nav-purchases-report" role="tabpanel" aria-labelledby="nav-purchases-report-tab">...</div>
+            <div class="tab-pane fade text-center" id="navPurchasesReport" role="tabpanel" aria-labelledby="navPurchasesReportTab">
+                <h2 class="mt-5">Coming soon</h2>
+                <p><strong>Purchases report</strong> section is under construction</p>
+                <a href="home.html" class="text-center btn btn-primary">Back to Manage purchases</a>
+            </div>
 
         </div>
     </div>
 </main>
 
-<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js" integrity="sha512-T/tUfKSV1bihCnd+MxKD0Hm1uBBroVYBOYSk1knyvQ9VyZJpc/ALb4P0r6ubwVPSGB2GvjeoMAJJImBG12TiaQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.14.0-beta2/dist/js/bootstrap-select.min.js"></script>
-<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
+<!-- Script dependences -->
+<script src="assets/js/jquery-3.6.0.min.js"></script>
+<script src="assets/js/popper.min.js"></script>
+<script src="assets/js/bootstrap.min.js"></script>
+<script src="assets/js/bootstrap-datepicker.min.js"></script>
+<script src="assets/js/bootstrap-select.min.js"></script>
+<script src="assets/js/jquery-ui.min.js"></script>
+<!-- Knowify script -->
 <script type="text/javascript" src="main.js"></script>
 
 </body>
