--- a/home.html
+++ b/home.html
@@ -38,9 +38,10 @@
             <div class="tab-pane fade show active" id="navManagePurchases" role="tabpanel" aria-labelledby="navManagePurchasesTab">
                 <div class="toolbar d-flex flex-wrap bd-highlight">
                     <div class="me-2 mb-2">
+                        <label for="searchInput" class="visually-hidden">Date</label>
                         <div class="search-input input-group input-group-sm">
                             <span class="input-group-text"><img src="assets/img/search.svg" alt="search icon"></span>
-                            <input type="text" class="form-control" placeholder="Search table..." aria-label="Username" aria-describedby="basic-addon1">
+                            <input id="searchInput" type="text" class="form-control" placeholder="Search table...">
                         </div>
                     </div>
                     <div class="me-2 mb-2">
@@ -193,7 +194,7 @@
 <script src="assets/js/bootstrap-select.min.js"></script>
 <script src="assets/js/jquery-ui.min.js"></script>
 <!-- Knowify script -->
-<script type="text/javascript" src="main.js"></script>
+<script src="assets/js/main.js"></script>
 
 </body>
 </html>
